--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+GNOME Video Arcade 0.4.1
+========================
+
+        Released July 24 2007
+
+        What's New
+        ----------
+        * Fixed some internationalization bugs.
+
+        Translations
+        ------------
+        * Daniel Nylander (sv)
+
 GNOME Video Arcade 0.4
 ======================
 
