--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 GNOME Video Arcade 0.4.2
 ========================
 
-        Released August ?? 2007
+        Released August 2 2007
 
         What's New
         ----------
