--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-08-31  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/main.c (start):
+	Bind to "selected-view" GConf key after database is built.
+
+	* src/gva-main (gva_main_init):
+	Move "selected-view" GConf key binding to start().
+
 2007-08-30  Matthew Barnes  <mbarnes@redhat.com>
 
 	* src/gva-tree-view.c (gva_tree_view_run_query):
