2007-09-01  Matthew Barnes  <mbarnes@redhat.com>
	* src/gva-tree-view.c (gva_tree_view_run_query):
	Resize the columns after setting a new tree model.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-01  Matthew Barnes  <mbarnes@redhat.com>
 
+	* src/gva-tree-view.c (gva_tree_view_run_query):
+	Resize the columns after setting a new tree model.
+
+2007-09-01  Matthew Barnes  <mbarnes@redhat.com>
+
 	* Add some more developer documentation.
 
 2007-08-31  Matthew Barnes  <mbarnes@redhat.com>
