--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-15  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-columns.c:
+	Add a "Players" column.
+
 2007-09-01  Matthew Barnes  <mbarnes@redhat.com>
 
 	* NEWS: Update for 0.4.3
